<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/labelVariavelX"
        android:layout_width="178dp"
        android:layout_height="50dp"
        android:text="@string/variavel_x"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.101" />

    <TextView
        android:id="@+id/TextViewVariavelX"
        android:layout_width="83dp"
        android:layout_height="61dp"
        tools:text="@string/x"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toBottomOf="@+id/labelVariavelX"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/labelVariavelX"
        app:layout_constraintTop_toTopOf="@+id/labelVariavelX" />

    <TextView
        android:id="@+id/labelVariavelY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/variavel_y"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelVariavelX"
        app:layout_constraintVertical_bias="0.312" />

    <TextView
        android:id="@+id/TextViewVariavelY"
        android:layout_width="99dp"
        android:layout_height="49dp"
        tools:text="@string/y"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toBottomOf="@+id/labelVariavelY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.424"
        app:layout_constraintStart_toEndOf="@+id/labelVariavelY"
        app:layout_constraintTop_toTopOf="@+id/labelVariavelY" />

    <Button
        android:id="@+id/buttonSetVariavelX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_variavel_x"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/labelVariavelY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelVariavelX" />

    <Button
        android:id="@+id/buttonSetVariavelY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_variavel_y"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelVariavelY"
        app:layout_constraintVertical_bias="0.183" />

    <TextView
        android:id="@+id/TextviewVariavelResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/resultado"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toBottomOf="@+id/labelSoma"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.798"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/labelSoma" />

    <Button
        android:id="@+id/buttonCalcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calcular"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.848"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextviewVariavelResultado"
        app:layout_constraintVertical_bias="0.652" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="135dp"
        android:layout_height="147dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonCalcular"
        app:layout_constraintHorizontal_bias="0.179"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelSoma"
        app:layout_constraintVertical_bias="0.827"
        app:srcCompat="@drawable/calculadora" />

    <TextView
        android:id="@+id/labelSoma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/soma"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/TextviewVariavelResultado"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSetVariavelY"
        app:layout_constraintVertical_bias="0.141" />

</androidx.constraintlayout.widget.ConstraintLayout>